# mimir-news

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/mimir_news/: agents.py  constants.py  crew.py  main.py  markets.py  models.py  preprocess.py  video.py
src/mimir_news/prompts/: news_writer.yaml  researcher.yaml
